--- a/notebooks/storm250_notebook.ipynb
+++ b/notebooks/storm250_notebook.ipynb
@@ -1916,8 +1916,8 @@
         "    Returns a subset of `storm_df` with extra columns:\n",
         "      - If product_filter is provided: for each normalized field key `k`:\n",
         "          * `{k}_scan`                : Py-ART Radar object (or None if keep_in_memory=False)\n",
-        "          * `{k}_cache_member_name`   : local pickle path where the Radar object is cached\n",
-        "          * `{k}_matched_member_name` : matched S3 object key (filename)\n",
+        "          * `{k}_cache_volume_path`   : local pickle path where the Radar object is cached\n",
+        "          * `{k}_matched_volume_s3_key` : matched S3 object key (filename)\n",
         "      - Else (no product_filter): legacy single triple:\n",
         "          * 'radar_scan', 'cache_member_name', 'matched_member_name'\n",
         "\n",
@@ -2234,8 +2234,8 @@
         "                    out = row.to_dict()\n",
         "                    for k, info in prod_infos.items():\n",
         "                        out[f\"{k}_scan\"] = info[\"scan\"]\n",
-        "                        out[f\"{k}_cache_member_name\"] = info[\"pkl\"]\n",
-        "                        out[f\"{k}_matched_member_name\"] = info[\"name\"]\n",
+        "                        out[f\"{k}_cache_volume_path\"] = info[\"pkl\"]\n",
+        "                        out[f\"{k}_matched_volume_s3_key\"] = info[\"name\"]\n",
         "                    linked_rows.append(out)\n",
         "                    matched_count_for_day += 1\n",
         "                    if debug:\n",
@@ -2265,7 +2265,7 @@
         "            extra = []\n",
         "            for fld in allowed_fields:\n",
         "                k = _product_key(fld)\n",
-        "                extra += [f\"{k}_scan\", f\"{k}_cache_member_name\", f\"{k}_matched_member_name\"]\n",
+        "                extra += [f\"{k}_scan\", f\"{k}_cache_volume_path\", f\"{k}_matched_volume_s3_key\"]\n",
         "            return pd.DataFrame(columns=base_cols + extra)\n",
         "        else:\n",
         "            return pd.DataFrame(columns=base_cols + [\"radar_scan\", \"cache_member_name\", \"matched_member_name\"])\n",
@@ -2277,7 +2277,7 @@
         "        prod_keys = [_product_key(p) for p in allowed_fields]\n",
         "        extra_cols = []\n",
         "        for k in prod_keys:\n",
-        "            extra_cols += [f\"{k}_scan\", f\"{k}_cache_member_name\", f\"{k}_matched_member_name\"]\n",
+        "            extra_cols += [f\"{k}_scan\", f\"{k}_cache_volume_path\", f\"{k}_matched_volume_s3_key\"]\n",
         "        cols = list(storm_df.columns) + extra_cols\n",
         "    else:\n",
         "        cols = list(storm_df.columns) + [\"radar_scan\", \"cache_member_name\", \"matched_member_name\"]\n",
@@ -3974,7 +3974,7 @@
         "        falling back to legacy 'radar_scan' if present.\n",
         "      - Use the reference composite to run the exact same bounding logic as before.\n",
         "      - Crop EVERY product composite present in the row (for each <key>_scan) to the stationary bbox (loading from\n",
-        "        <key>_cache_member_name if needed) and store the cropped composite back in <key>_scan in the output rows.\n",
+        "        <key>_cache_volume_path if needed) and store the cropped composite back in <key>_scan in the output rows.\n",
         "    \"\"\"\n",
         "    # set up debug plot dir if requested\n",
         "    if debug:\n",
@@ -4009,7 +4009,7 @@
         "        try:\n",
         "            # Load the reference composite (try in-memory first, then cache)\n",
         "            ref_scan_col = (f\"{reference_key}_scan\" if not legacy_mode else 'radar_scan')\n",
-        "            ref_cache_col = (f\"{reference_key}_cache_member_name\" if not legacy_mode else 'cache_member_name')\n",
+        "            ref_cache_col = (f\"{reference_key}_cache_volume_path\" if not legacy_mode else 'cache_member_name')\n",
         "\n",
         "            comp_scan = row.get(ref_scan_col, None)\n",
         "\n",
@@ -4175,7 +4175,7 @@
         "            # For each product key present in the original linked_df, crop its comp (loading from cache if necessary)\n",
         "            for key in product_keys:\n",
         "                scan_col = (f\"{key}_scan\" if not (legacy_mode and key == 'radar') else 'radar_scan')\n",
-        "                cache_col = (f\"{key}_cache_member_name\" if not (legacy_mode and key == 'radar') else 'cache_member_name')\n",
+        "                cache_col = (f\"{key}_cache_volume_path\" if not (legacy_mode and key == 'radar') else 'cache_member_name')\n",
         "\n",
         "                comp = out.get(scan_col, None)\n",
         "                if comp is None:\n",
@@ -5463,7 +5463,7 @@
         "      base_dir/{year}/{RADAR_SITE}/storm_{storm_id}/\n",
         "\n",
         "    Inside each storm folder:\n",
-        "      - one CONTEXT HDF (rows=times; all bbox_df columns except *_scan and *_cache_member_name)\n",
+        "      - one CONTEXT HDF (rows=times; all bbox_df columns except *_scan and *_cache_volume_path)\n",
         "      - one product HDF per *_scan column, each containing dataset '/data'\n",
         "        shaped (T, H, W, C) with float32 + NaN, chunked & compressed.\n",
         "\n",
@@ -5679,7 +5679,7 @@
         "        # ---------- write context HDF ----------\n",
         "        t_meta0 = perf_counter()\n",
         "        context_df = sub.copy()\n",
-        "        drop_cols = [c for c in context_df.columns if c.endswith(\"_scan\") or c.endswith(\"_cache_member_name\")]\n",
+        "        drop_cols = [c for c in context_df.columns if c.endswith(\"_scan\") or c.endswith(\"_cache_volume_path\")]\n",
         "        context_df.drop(columns=drop_cols, inplace=True, errors=\"ignore\")\n",
         "\n",
         "        # FIX: add primary-key component time_unix_ms (UTC, int64 ms since epoch)\n",
@@ -5813,7 +5813,7 @@
         "            \"hail_lon\":        { \"dtype\": \"float32\",         \"unit\": \"deg_east\",             \"desc\": \"Hail report longitude\" },\n",
         "            \"hail_lat\":        { \"dtype\": \"float32\",         \"unit\": \"deg\",                  \"desc\": \"Hail report latitude\" },\n",
         "            \"hail_magnitude\":  { \"dtype\": \"float32\",         \"unit\": \"in\",                   \"desc\": \"Hail report size (inches)\" },\n",
-        "            \"reflectivity_matched_member_name\": { \"dtype\": \"string\", \"unit\": \"\",            \"desc\": \"Matched radar volume file name\" },\n",
+        "            \"reflectivity_matched_volume_s3_key\": { \"dtype\": \"string\", \"unit\": \"\",            \"desc\": \"Matched radar volume file name\" },\n",
         "            \"min_lat\":         { \"dtype\": \"float32\",         \"unit\": \"deg\",                  \"desc\": \"Min track latitude\" },\n",
         "            \"max_lat\":         { \"dtype\": \"float32\",         \"unit\": \"deg\",                  \"desc\": \"Max track latitude\" },\n",
         "            \"min_lon\":         { \"dtype\": \"float32\",         \"unit\": \"deg_east_wrap180\",     \"desc\": \"Min track longitude\" },\n",
@@ -6177,7 +6177,7 @@
         "                    host_idx_dset[i] = int(host_idx)\n",
         "\n",
         "                    if srckey_dset is not None:\n",
-        "                        keycol = f\"{prefix}_matched_member_name\"\n",
+        "                        keycol = f\"{prefix}_matched_volume_s3_key\"\n",
         "                        try:\n",
         "                            srckey_dset[i] = str(row.get(keycol, \"\") or \"\")\n",
         "                        except Exception:\n",
